--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-MONGOURL= mongodb+srv://JoseMart:josemart364855@cluster0.7xkhw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL= mongodb+srv://JoseMart:josemart364855@cluster0.7xkhw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECURITYKEY=josemart1234567
